--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -40,13 +40,7 @@ block content
         section
             h4 How do i now that image is suitable for using as feather-icon ?
             ul
-                li Icon is
-                    strong
-                        |  not
-                    |  cut from sides
-                li Has
-                    strong
-                        |  no
-                    |  parts missing (Not using fill color)
+                li Icon is not cut from sides
+                li Has no parts missing (Not using fill color)
                 li Has nice stroke width of lines (sometimes bit different than original)
 
