style with tailwind

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,19 +1,1 @@
-body {
-  padding: 50px;
-  font: 16px Helvetica, Arial, sans-serif;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-a {
-  color: #00b7ff;
-}
-
-.form-field {
-  margin: 10px 0;
-}
-
-section {
-  margin: 50px 0;
-}
+@import './tailwind.css';
