--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    meta(name='viewport' content="width=device-width, initial-scale=1.0")
+
+  body.flex.justify-center.m-8
     block content
