--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -26,7 +26,7 @@ block content
             form(action='/optimize' method='post', enctype="multipart/form-data", class='bg-blue-50 p-8 rounded-lg')
                 h3.text-xl.mb-4 Optimize SVG
                 label(for='file-input') Select file and click optimize
-                    em  (only '.svg' allowed files)
+                    em  (only '.svg' files allowed)
                 div.mt-4.flex.items-center
                     input(
                         type='file'
