--- a/src/views/footer.pug
+++ b/src/views/footer.pug
@@ -1,4 +1,4 @@
 footer.my-6.text-center
     | Made by&nbsp;
-    a(href='https://www.kontentino.com/?utm_source=kontentino_svg_optimizer&utm_medium=web' class='text-blue-600') Kontentino
+    a(href='https://www.kontentino.com/?utm_source=kontentino_svg_optimizer&utm_medium=web' class='text-blue-600' target='_blank') Kontentino
     |  with&nbsp;❤️ &nbsp;in 2020
