--- a/src/views/navigation.pug
+++ b/src/views/navigation.pug
@@ -1,5 +1,6 @@
 nav.bg-white.mb-10.fixed.w-full.top-0.left-0.shadow-sm.px-10
     div.container.mx-auto.py-4.flex.items-center.space-x-3.max-w-screen-lg
-        img(src='https://static.kontentino.com/img/logo/logo.svg' class='max-h-8')
+        a(href='https://www.kontentino.com/?utm_source=kontentino_svg_optimizer&utm_medium=web' target='_blank')
+            img(src='https://static.kontentino.com/img/logo/logo.svg' class='max-h-8')
         h1.text-xl SVG Optimizer
         a.text-blue-600(href='https://github.com/kontentino/svg-optimizer' style='margin-left: auto;') GitHub
