--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css")
     meta(name='viewport' content="width=device-width, initial-scale=1.0")
 
   body.bg-gray-50
