--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css")
     meta(name='viewport' content="width=device-width, initial-scale=1.0")
+    link(rel='icon' type='image/png' href='/favicon.png')
 
   body.bg-gray-50
     include  navigation.pug
